Frontend_deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: website
  labels:
    app: website
    service: website
spec:
  ports:
    - name: https
      port: 80
      targetPort: 80
  selector:
    app: website
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: website
spec:
  replicas: 1
  selector:
    matchLabels:
      app: website
      version: v1
  template:
    metadata:
      labels:
        app: website
        version: v1
    spec:
      serviceAccountName: website
      containers:
        - image: 553517729094.dkr.ecr.us-west-2.amazonaws.com/website-withpath
          imagePullPolicy: IfNotPresent
          name: website
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: portal
  labels:
    app: portal
    service: portal
spec:
  ports:
    - name: https
      port: 80
      targetPort: 80
  selector:
    app: portal
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: portal
spec:
  replicas: 1
  selector:
    matchLabels:
      app: portal
      version: v1
  template:
    metadata:
      labels:
        app: portal
        version: v1
    spec:
      serviceAccountName: portal
      containers:
        - image: 553517729094.dkr.ecr.us-west-2.amazonaws.com/portal-withpath
          imagePullPolicy: IfNotPresent
          name: portal
          ports:
            - containerPort: 80
