deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: httpbin-one
  labels:
    app: httpbin-one
    service: httpbin-one
spec:
  ports:
    - name: https
      port: 9443
      targetPort: 9443
  selector:
    app: httpbin-one
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: httpbin-one
spec:
  replicas: 1
  selector:
    matchLabels:
      app: httpbin-one
      version: v1
  template:
    metadata:
      labels:
        app: httpbin-one
        version: v1
    spec:
      serviceAccountName: httpbin-one
      containers:
        - image: 553517729094.dkr.ecr.us-west-2.amazonaws.com/auth-http
          imagePullPolicy: IfNotPresent
          name: httpbin-one
          ports:
            - containerPort: 9443
---
apiVersion: v1
kind: Service
metadata:
  name: httpbin-two
  labels:
    app: httpbin-two
    service: httpbin-two
spec:
  ports:
    - name: https
      port: 7443
      targetPort: 7443
  selector:
    app: httpbin-two
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: httpbin-two
spec:
  replicas: 1
  selector:
    matchLabels:
      app: httpbin-two
      version: v1
  template:
    metadata:
      labels:
        app: httpbin-two
        version: v1
    spec:
      serviceAccountName: httpbin-two
      containers:
        - image: 553517729094.dkr.ecr.us-west-2.amazonaws.com/social-http
          imagePullPolicy: IfNotPresent
          name: httpbin-two
          ports:
            - containerPort: 7443
---
apiVersion: v1
kind: Service
metadata:
  name: httpbin-three
  labels:
    app: httpbin-three
    service: httpbin-three
spec:
  ports:
    - name: http
      port: 6443
      targetPort: 6443
  selector:
    app: httpbin-three
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: httpbin-three
spec:
  replicas: 1
  selector:
    matchLabels:
      app: httpbin-three
      version: v1
  template:
    metadata:
      labels:
        app: httpbin-three
        version: v1
    spec:
      serviceAccountName: httpbin-three
      containers:
        - image: 553517729094.dkr.ecr.us-west-2.amazonaws.com/communication-http
          imagePullPolicy: IfNotPresent
          name: httpbin-three
          ports:
            - containerPort: 6443
