istio-Gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: my-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 443
        name: http
        protocol: HTTPS
      tls:
        mode: SIMPLE
        credentialName: nxtlvl.ai-certs
      hosts:
        - '*'
