Backend-virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: virtual-service-auth
  namespace: default
spec:
  hosts:
    - "*"
  gateways:
    - my-gateway
  http:
    - match:
      - uri:
          prefix: "/authentication"
      route:
      - destination:
          host: httpbin-one
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: virtual-service-social
  namespace: default
spec:
  hosts:
    - "*"
  gateways:
    - my-gateway
  http:
    - match:
      - uri:
          prefix: "/socialmedia"
      route:
      - destination:
          host: httpbin-two
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: virtual-service-communication
  namespace: default
spec:
  hosts:
    - "*"
  gateways:
    - my-gateway
  http:
    - match:
      - uri:
          prefix: "/communication"
      route:
      - destination:
          host: httpbin-three
